<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_view"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:id="@+id/root_element"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marko_one"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#f5deb3"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/monda"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom_login"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_button_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/text_bottom_login"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_sign_in"
            android:layout_marginEnd="6dp"
            android:text="@string/text_button_sign_in" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_register"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:text="@string/text_button_register" />
    </LinearLayout>

</RelativeLayout>