<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="#f5deb3"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/hotel"/>

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UnknownId">

        <Button
            android:id="@+id/hotel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/hotel"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/reservation"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/reservation"
            android:textColor="@android:color/black"

            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel">

        <Button
            android:id="@+id/feedback"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/feedback"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel">

        <Button
            android:id="@+id/restaurant"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/restaurant"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:text="@string/gallery"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdButtonPanel"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="48dp"
        android:background="#7e481c"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fixed_footer"
            android:textColor="#f5deb3"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>